tests/ui/feature-gates/feature-gate-f128.stderr
error[E0658]: the f128 primitive type is experimental
  --> $DIR/feature-gate-f128.rs:1:10
   |
LL | const A: f128 = 10.0;
   |          ^^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f128)]` to the crate attributes to enable

error[E0658]: the f128 primitive type is experimental
  --> $DIR/feature-gate-f128.rs:4:12
   |
LL |     let a: f128 = 100.0;
   |            ^^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f128)]` to the crate attributes to enable

error[E0658]: the f128 primitive type is experimental
  --> $DIR/feature-gate-f128.rs:9:11
   |
LL | fn foo(a: f128) {}
   |           ^^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f128)]` to the crate attributes to enable

error[E0658]: the f128 primitive type is experimental
  --> $DIR/feature-gate-f128.rs:12:8
   |
LL |     a: f128,
   |        ^^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f128)]` to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
