tests/ui/feature-gates/feature-gate-f128.rs
const A: f128 = 10.0;

pub fn main() {
    let a: f128 = 100.0;
    let b = 0.0f128;
    foo(1.23);
}

fn foo(a: f128) {}

struct Bar {
    a: f128,
}
